[gd_scene load_steps=6 format=3 uid="uid://b8o7l7qide3e1"]

[ext_resource type="Theme" uid="uid://dwt1c0b2tvhig" path="res://theme_resources/theme_template.tres" id="1_0p5ps"]
[ext_resource type="Script" path="res://how_to_play/how_to_play.gd" id="1_tpvd0"]
[ext_resource type="Script" path="res://how_to_play/tab_button.gd" id="2_41wgy"]
[ext_resource type="Script" path="res://how_to_play/input_type_tabs.gd" id="3_e8lqy"]
[ext_resource type="ButtonGroup" uid="uid://m7noppbbpd3h" path="res://how_to_play/how_to_play_button_group.tres" id="3_pgl7h"]

[node name="HowToPlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tpvd0")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -658.0
offset_top = -302.0
offset_right = 658.0
offset_bottom = 303.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0p5ps")

[node name="MainColumn" type="VBoxContainer" parent="Panel"]
layout_mode = 2
offset_left = 25.0
offset_top = 25.0
offset_right = 1291.0
offset_bottom = 688.0

[node name="Title" type="Label" parent="Panel/MainColumn"]
layout_mode = 2
offset_right = 1266.0
offset_bottom = 91.0
theme_type_variation = &"HeaderMedium"
text = "HOW TO PLAY!"
horizontal_alignment = 1

[node name="Content" type="MarginContainer" parent="Panel/MainColumn"]
layout_mode = 2
offset_top = 95.0
offset_right = 1266.0
offset_bottom = 576.0
theme_override_constants/margin_top = 70
theme_override_constants/margin_bottom = 70

[node name="Column" type="VBoxContainer" parent="Panel/MainColumn/Content"]
layout_mode = 2
offset_top = 70.0
offset_right = 1266.0
offset_bottom = 411.0
theme_override_constants/separation = 15

[node name="TabButtons" type="HBoxContainer" parent="Panel/MainColumn/Content/Column"]
layout_mode = 2
offset_right = 1266.0
offset_bottom = 72.0
theme_override_constants/separation = 50
alignment = 1

[node name="Keyboard" type="Button" parent="Panel/MainColumn/Content/Column/TabButtons"]
layout_mode = 2
offset_left = 361.0
offset_right = 600.0
offset_bottom = 72.0
focus_neighbor_left = NodePath("../Controller")
focus_neighbor_top = NodePath("../../../../Back")
focus_neighbor_right = NodePath("../Controller")
focus_neighbor_bottom = NodePath("../../../../Back")
focus_next = NodePath("../Controller")
focus_previous = NodePath("../../../../Back")
theme_type_variation = &"HowToPlayButtons"
toggle_mode = true
button_pressed = true
button_group = ExtResource("3_pgl7h")
text = "Keyboard"
script = ExtResource("2_41wgy")

[node name="Controller" type="Button" parent="Panel/MainColumn/Content/Column/TabButtons"]
layout_mode = 2
offset_left = 650.0
offset_right = 904.0
offset_bottom = 72.0
focus_neighbor_left = NodePath("../Keyboard")
focus_neighbor_top = NodePath("../../../../Back")
focus_neighbor_right = NodePath("../Keyboard")
focus_neighbor_bottom = NodePath("../../../../Back")
focus_next = NodePath("../../../../Back")
focus_previous = NodePath("../Keyboard")
theme_type_variation = &"HowToPlayButtons"
toggle_mode = true
button_group = ExtResource("3_pgl7h")
text = "Controller"
script = ExtResource("2_41wgy")

[node name="ControlersTabs" type="TabContainer" parent="Panel/MainColumn/Content/Column"]
layout_mode = 2
offset_top = 87.0
offset_right = 1266.0
offset_bottom = 341.0
tabs_visible = false
script = ExtResource("3_e8lqy")

[node name="Keyboard" type="VBoxContainer" parent="Panel/MainColumn/Content/Column/ControlersTabs"]
visible = false
layout_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label2" type="Label" parent="Panel/MainColumn/Content/Column/ControlersTabs/Keyboard"]
layout_mode = 2
offset_right = 1266.0
offset_bottom = 56.0
theme_type_variation = &"HowToPlayLabels"
text = "Arrow keys  - Move"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="Panel/MainColumn/Content/Column/ControlersTabs/Keyboard"]
layout_mode = 2
offset_top = 66.0
offset_right = 1266.0
offset_bottom = 122.0
theme_type_variation = &"HowToPlayLabels"
text = "X - Attack"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="Panel/MainColumn/Content/Column/ControlersTabs/Keyboard"]
layout_mode = 2
offset_top = 132.0
offset_right = 1266.0
offset_bottom = 188.0
theme_type_variation = &"HowToPlayLabels"
text = "C - Jump"
horizontal_alignment = 1

[node name="Label5" type="Label" parent="Panel/MainColumn/Content/Column/ControlersTabs/Keyboard"]
layout_mode = 2
offset_top = 198.0
offset_right = 1266.0
offset_bottom = 254.0
theme_type_variation = &"HowToPlayLabels"
text = "Esc - Pause Menu"
horizontal_alignment = 1

[node name="Controller" type="VBoxContainer" parent="Panel/MainColumn/Content/Column/ControlersTabs"]
layout_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label2" type="Label" parent="Panel/MainColumn/Content/Column/ControlersTabs/Controller"]
layout_mode = 2
offset_right = 1266.0
offset_bottom = 56.0
theme_type_variation = &"HowToPlayLabels"
text = "Left Analog Stick  - Move"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="Panel/MainColumn/Content/Column/ControlersTabs/Controller"]
layout_mode = 2
offset_top = 66.0
offset_right = 1266.0
offset_bottom = 122.0
theme_type_variation = &"HowToPlayLabels"
text = "X (Xbox), Square (Sony) - Attack"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="Panel/MainColumn/Content/Column/ControlersTabs/Controller"]
layout_mode = 2
offset_top = 132.0
offset_right = 1266.0
offset_bottom = 188.0
theme_type_variation = &"HowToPlayLabels"
text = "A (Xbox), X (Sony) - Jump"
horizontal_alignment = 1

[node name="Label5" type="Label" parent="Panel/MainColumn/Content/Column/ControlersTabs/Controller"]
layout_mode = 2
offset_top = 198.0
offset_right = 1266.0
offset_bottom = 254.0
theme_type_variation = &"HowToPlayLabels"
text = "Menu, Options - Pause Menu"
horizontal_alignment = 1

[node name="Back" type="Button" parent="Panel/MainColumn"]
layout_mode = 2
offset_top = 580.0
offset_right = 1266.0
offset_bottom = 663.0
focus_neighbor_left = NodePath("../Content/Column/TabButtons/Controller")
focus_neighbor_top = NodePath("../Content/Column/TabButtons/Controller")
focus_neighbor_right = NodePath("../Content/Column/TabButtons/Keyboard")
focus_neighbor_bottom = NodePath("../Content/Column/TabButtons/Keyboard")
focus_next = NodePath("../Content/Column/TabButtons/Keyboard")
focus_previous = NodePath("../Content/Column/TabButtons/Controller")
theme_type_variation = &"PauseButtons"
text = "Back
"

[connection signal="tab_pressed" from="Panel/MainColumn/Content/Column/TabButtons/Keyboard" to="Panel/MainColumn/Content/Column/ControlersTabs" method="_on_tab_pressed"]
[connection signal="tab_pressed" from="Panel/MainColumn/Content/Column/TabButtons/Controller" to="Panel/MainColumn/Content/Column/ControlersTabs" method="_on_tab_pressed"]
[connection signal="pressed" from="Panel/MainColumn/Back" to="." method="_on_back_pressed"]
